fix: align self grid on listing page

--- a/src/Product-listing/filter-section.css
+++ b/src/Product-listing/filter-section.css
@@ -15,6 +15,7 @@
 }
 .grid-right-of-filter {
   width: 80%;
+  align-self: flex-start;
 }
 .title_of_filters {
   display: flex;
